// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/pages/SMSA2P/Link/List render 1`] = `
<List
  action={
    Array [
      Object {
        "children": "Refresh",
        "id": "link-list-refresh",
        "leftIcon": [Function],
        "loading": undefined,
        "onClick": undefined,
      },
    ]
  }
  breadcrumb={
    Array [
      Object {
        "label": "Link",
      },
    ]
  }
  filter={
    Array [
      Object {
        "id": "link-list-filters-status",
        "maxWidth": 300,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-customer",
        "maxWidth": 300,
        "searchable": true,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-date",
        "type": "dateRange",
      },
    ]
  }
  noMargin={false}
  noPadding={false}
  onBottomPage={[Function]}
  search={
    Object {
      "id": "link-list-search",
      "onChange": undefined,
      "placeholder": "Search...",
      "value": undefined,
    }
  }
  table={
    Object {
      "data": Array [
        Object {
          "activationStatus": "rejected",
          "category": undefined,
          "status": "Rejected",
        },
      ],
      "id": "link-list-table-row",
      "loading": false,
      "loadingRoot": undefined,
      "meta": Object {},
      "onClickRow": [MockFunction],
      "onPaginationChange": undefined,
      "page": undefined,
      "schema": Array [
        Object {
          "cellStyle": Object {
            "minWidth": 240,
          },
          "label": "Customer",
          "name": "custAccName",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Order Number",
          "name": "orderNumber",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Service Category",
          "name": "category",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "IP Customer",
          "name": "ip",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date",
          "label": "Request Active",
          "name": "activeDate",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Order Date",
          "name": "createdAt",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Last Update",
          "name": "updatedAt",
          "sort": true,
        },
        Object {
          "cellStyle": Object {
            "minWidth": 120,
          },
          "label": "Status",
          "name": "status",
          "schemaStatus": Object {
            "Checking": "warning",
            "Checking Order": "warning",
            "Completed": "success",
            "Customer Request": "primary",
            "Customer Review": "alert",
            "Rejected": "danger",
          },
        },
      ],
      "useOrderBy": Array [
        undefined,
        undefined,
      ],
      "useOrderDirection": Array [
        undefined,
        undefined,
      ],
    }
  }
  tabs={
    Object {
      "onChange": [MockFunction],
      "options": Array [],
      "value": "onprogress",
    }
  }
  title="Link"
  withTopDivider={true}
/>
`;

exports[`src/pages/SMSA2P/Link/List render with access feature 1`] = `
<List
  action={Array []}
  breadcrumb={
    Array [
      Object {
        "label": "Link",
      },
    ]
  }
  filter={Array []}
  noMargin={false}
  noPadding={false}
  onBottomPage={[Function]}
  search={
    Object {
      "id": "link-list-search",
      "onChange": undefined,
      "placeholder": "Search...",
      "value": undefined,
    }
  }
  table={
    Object {
      "data": Array [
        Object {
          "activationStatus": "checking",
          "category": undefined,
          "status": "Checking",
        },
      ],
      "id": "link-list-table-row",
      "loading": false,
      "loadingRoot": undefined,
      "meta": undefined,
      "onClickRow": [MockFunction],
      "onPaginationChange": undefined,
      "page": undefined,
      "schema": Array [
        Object {
          "cellStyle": Object {
            "minWidth": 240,
          },
          "label": "Customer",
          "name": "custAccName",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Order Number",
          "name": "orderNumber",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Service Category",
          "name": "category",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "IP Customer",
          "name": "ip",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date",
          "label": "Request Active",
          "name": "activeDate",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Order Date",
          "name": "createdAt",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Last Update",
          "name": "updatedAt",
          "sort": true,
        },
        Object {
          "cellStyle": Object {
            "minWidth": 120,
          },
          "label": "Status",
          "name": "status",
          "schemaStatus": Object {
            "Checking": "warning",
            "Checking Order": "warning",
            "Completed": "success",
            "Customer Request": "primary",
            "Customer Review": "alert",
            "Rejected": "danger",
          },
        },
      ],
      "useOrderBy": Array [
        undefined,
        undefined,
      ],
      "useOrderDirection": Array [
        undefined,
        undefined,
      ],
    }
  }
  tabs={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "progress",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "options": Array [
        Object {
          "id": "link-list-tab-request",
          "label": "Link Activation Requests",
          "value": "progress",
        },
        Object {
          "id": "link-list-tab-active",
          "label": "Active Link",
          "value": "done",
        },
      ],
      "value": "",
    }
  }
  title="Link"
  withTopDivider={true}
/>
`;

exports[`src/pages/SMSA2P/Link/List render with no status 1`] = `
<List
  action={
    Array [
      Object {
        "children": "Refresh",
        "id": "link-list-refresh",
        "leftIcon": [Function],
        "loading": undefined,
        "onClick": undefined,
      },
    ]
  }
  breadcrumb={
    Array [
      Object {
        "label": "Link",
      },
    ]
  }
  filter={
    Array [
      Object {
        "id": "link-list-filters-status",
        "maxWidth": 300,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-customer",
        "maxWidth": 300,
        "searchable": true,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-date",
        "type": "dateRange",
      },
    ]
  }
  noMargin={false}
  noPadding={false}
  onBottomPage={[Function]}
  search={
    Object {
      "id": "link-list-search",
      "onChange": undefined,
      "placeholder": "Search...",
      "value": undefined,
    }
  }
  table={
    Object {
      "data": Array [
        Object {
          "activationStatus": "",
          "category": undefined,
          "status": "",
        },
      ],
      "id": "link-list-table-row",
      "loading": false,
      "loadingRoot": undefined,
      "meta": undefined,
      "onClickRow": [MockFunction],
      "onPaginationChange": undefined,
      "page": undefined,
      "schema": Array [
        Object {
          "cellStyle": Object {
            "minWidth": 240,
          },
          "label": "Customer",
          "name": "custAccName",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Order Number",
          "name": "orderNumber",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Service Category",
          "name": "category",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "IP Customer",
          "name": "ip",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date",
          "label": "Request Active",
          "name": "activeDate",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Order Date",
          "name": "createdAt",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Last Update",
          "name": "updatedAt",
          "sort": true,
        },
        Object {
          "cellStyle": Object {
            "minWidth": 120,
          },
          "label": "Status",
          "name": "status",
          "schemaStatus": Object {
            "Checking": "warning",
            "Checking Order": "warning",
            "Completed": "success",
            "Customer Request": "primary",
            "Customer Review": "alert",
            "Rejected": "danger",
          },
        },
      ],
      "useOrderBy": Array [
        undefined,
        undefined,
      ],
      "useOrderDirection": Array [
        undefined,
        undefined,
      ],
    }
  }
  tabs={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "progress",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "options": Array [],
      "value": "onprogress",
    }
  }
  title="Link"
  withTopDivider={true}
/>
`;

exports[`src/pages/SMSA2P/Link/List render with status approval_am 1`] = `
<List
  action={
    Array [
      Object {
        "children": "Refresh",
        "id": "link-list-refresh",
        "leftIcon": [Function],
        "loading": undefined,
        "onClick": undefined,
      },
    ]
  }
  breadcrumb={
    Array [
      Object {
        "label": "Link",
      },
    ]
  }
  filter={
    Array [
      Object {
        "id": "link-list-filters-status",
        "maxWidth": 300,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-customer",
        "maxWidth": 300,
        "searchable": true,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-date",
        "type": "dateRange",
      },
    ]
  }
  noMargin={false}
  noPadding={false}
  onBottomPage={[Function]}
  search={
    Object {
      "id": "link-list-search",
      "onChange": undefined,
      "placeholder": "Search...",
      "value": undefined,
    }
  }
  table={
    Object {
      "data": Array [
        Object {
          "activationStatus": "approval_am",
          "category": undefined,
          "status": "Customer Request",
        },
      ],
      "id": "link-list-table-row",
      "loading": false,
      "loadingRoot": undefined,
      "meta": undefined,
      "onClickRow": [MockFunction],
      "onPaginationChange": undefined,
      "page": undefined,
      "schema": Array [
        Object {
          "cellStyle": Object {
            "minWidth": 240,
          },
          "label": "Customer",
          "name": "custAccName",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Order Number",
          "name": "orderNumber",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Service Category",
          "name": "category",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "IP Customer",
          "name": "ip",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date",
          "label": "Request Active",
          "name": "activeDate",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Order Date",
          "name": "createdAt",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Last Update",
          "name": "updatedAt",
          "sort": true,
        },
        Object {
          "cellStyle": Object {
            "minWidth": 120,
          },
          "label": "Status",
          "name": "status",
          "schemaStatus": Object {
            "Checking": "warning",
            "Checking Order": "warning",
            "Completed": "success",
            "Customer Request": "primary",
            "Customer Review": "alert",
            "Rejected": "danger",
          },
        },
      ],
      "useOrderBy": Array [
        undefined,
        undefined,
      ],
      "useOrderDirection": Array [
        undefined,
        undefined,
      ],
    }
  }
  tabs={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "progress",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "options": Array [],
      "value": "onprogress",
    }
  }
  title="Link"
  withTopDivider={true}
/>
`;

exports[`src/pages/SMSA2P/Link/List render with status approval_provider 1`] = `
<List
  action={
    Array [
      Object {
        "children": "Refresh",
        "id": "link-list-refresh",
        "leftIcon": [Function],
        "loading": undefined,
        "onClick": undefined,
      },
    ]
  }
  breadcrumb={
    Array [
      Object {
        "label": "Link",
      },
    ]
  }
  filter={
    Array [
      Object {
        "id": "link-list-filters-status",
        "maxWidth": 300,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-customer",
        "maxWidth": 300,
        "searchable": true,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-date",
        "type": "dateRange",
      },
    ]
  }
  noMargin={false}
  noPadding={false}
  onBottomPage={[Function]}
  search={
    Object {
      "id": "link-list-search",
      "onChange": undefined,
      "placeholder": "Search...",
      "value": undefined,
    }
  }
  table={
    Object {
      "data": Array [
        Object {
          "activationStatus": "approval_provider",
          "category": undefined,
          "status": "Checking Order",
        },
      ],
      "id": "link-list-table-row",
      "loading": false,
      "loadingRoot": undefined,
      "meta": undefined,
      "onClickRow": [MockFunction],
      "onPaginationChange": undefined,
      "page": undefined,
      "schema": Array [
        Object {
          "cellStyle": Object {
            "minWidth": 240,
          },
          "label": "Customer",
          "name": "custAccName",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Order Number",
          "name": "orderNumber",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Service Category",
          "name": "category",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "IP Customer",
          "name": "ip",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date",
          "label": "Request Active",
          "name": "activeDate",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Order Date",
          "name": "createdAt",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Last Update",
          "name": "updatedAt",
          "sort": true,
        },
        Object {
          "cellStyle": Object {
            "minWidth": 120,
          },
          "label": "Status",
          "name": "status",
          "schemaStatus": Object {
            "Checking": "warning",
            "Checking Order": "warning",
            "Completed": "success",
            "Customer Request": "primary",
            "Customer Review": "alert",
            "Rejected": "danger",
          },
        },
      ],
      "useOrderBy": Array [
        undefined,
        undefined,
      ],
      "useOrderDirection": Array [
        undefined,
        undefined,
      ],
    }
  }
  tabs={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "progress",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "options": Array [],
      "value": "onprogress",
    }
  }
  title="Link"
  withTopDivider={true}
/>
`;

exports[`src/pages/SMSA2P/Link/List render with status completed 1`] = `
<List
  action={
    Array [
      Object {
        "children": "Refresh",
        "id": "link-list-refresh",
        "leftIcon": [Function],
        "loading": undefined,
        "onClick": undefined,
      },
    ]
  }
  breadcrumb={
    Array [
      Object {
        "label": "Link",
      },
    ]
  }
  filter={
    Array [
      Object {
        "id": "link-list-filters-status",
        "maxWidth": 300,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-customer",
        "maxWidth": 300,
        "searchable": true,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-date",
        "type": "dateRange",
      },
    ]
  }
  noMargin={false}
  noPadding={false}
  onBottomPage={[Function]}
  search={
    Object {
      "id": "link-list-search",
      "onChange": undefined,
      "placeholder": "Search...",
      "value": undefined,
    }
  }
  table={
    Object {
      "data": Array [
        Object {
          "activationStatus": "completed",
          "category": undefined,
          "status": "Completed",
        },
      ],
      "id": "link-list-table-row",
      "loading": false,
      "loadingRoot": undefined,
      "meta": undefined,
      "onClickRow": [MockFunction],
      "onPaginationChange": undefined,
      "page": undefined,
      "schema": Array [
        Object {
          "cellStyle": Object {
            "minWidth": 240,
          },
          "label": "Customer",
          "name": "custAccName",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Order Number",
          "name": "orderNumber",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Service Category",
          "name": "category",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "IP Customer",
          "name": "ip",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date",
          "label": "Request Active",
          "name": "activeDate",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Order Date",
          "name": "createdAt",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Last Update",
          "name": "updatedAt",
          "sort": true,
        },
        Object {
          "cellStyle": Object {
            "minWidth": 120,
          },
          "label": "Status",
          "name": "status",
          "schemaStatus": Object {
            "Checking": "warning",
            "Checking Order": "warning",
            "Completed": "success",
            "Customer Request": "primary",
            "Customer Review": "alert",
            "Rejected": "danger",
          },
        },
      ],
      "useOrderBy": Array [
        undefined,
        undefined,
      ],
      "useOrderDirection": Array [
        undefined,
        undefined,
      ],
    }
  }
  tabs={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "progress",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "options": Array [],
      "value": "onprogress",
    }
  }
  title="Link"
  withTopDivider={true}
/>
`;

exports[`src/pages/SMSA2P/Link/List render with status customerrequest 1`] = `
<List
  action={
    Array [
      Object {
        "children": "Refresh",
        "id": "link-list-refresh",
        "leftIcon": [Function],
        "loading": undefined,
        "onClick": undefined,
      },
    ]
  }
  breadcrumb={
    Array [
      Object {
        "label": "Link",
      },
    ]
  }
  filter={
    Array [
      Object {
        "id": "link-list-filters-status",
        "maxWidth": 300,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-customer",
        "maxWidth": 300,
        "searchable": true,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-date",
        "type": "dateRange",
      },
    ]
  }
  noMargin={false}
  noPadding={false}
  onBottomPage={[Function]}
  search={
    Object {
      "id": "link-list-search",
      "onChange": undefined,
      "placeholder": "Search...",
      "value": undefined,
    }
  }
  table={
    Object {
      "data": Array [
        Object {
          "activationStatus": "customerrequest",
          "category": undefined,
          "status": "Customer Request",
        },
      ],
      "id": "link-list-table-row",
      "loading": false,
      "loadingRoot": undefined,
      "meta": undefined,
      "onClickRow": [MockFunction],
      "onPaginationChange": undefined,
      "page": undefined,
      "schema": Array [
        Object {
          "cellStyle": Object {
            "minWidth": 240,
          },
          "label": "Customer",
          "name": "custAccName",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Order Number",
          "name": "orderNumber",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Service Category",
          "name": "category",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "IP Customer",
          "name": "ip",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date",
          "label": "Request Active",
          "name": "activeDate",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Order Date",
          "name": "createdAt",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Last Update",
          "name": "updatedAt",
          "sort": true,
        },
        Object {
          "cellStyle": Object {
            "minWidth": 120,
          },
          "label": "Status",
          "name": "status",
          "schemaStatus": Object {
            "Checking": "warning",
            "Checking Order": "warning",
            "Completed": "success",
            "Customer Request": "primary",
            "Customer Review": "alert",
            "Rejected": "danger",
          },
        },
      ],
      "useOrderBy": Array [
        undefined,
        undefined,
      ],
      "useOrderDirection": Array [
        undefined,
        undefined,
      ],
    }
  }
  tabs={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "progress",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "options": Array [],
      "value": "onprogress",
    }
  }
  title="Link"
  withTopDivider={true}
/>
`;

exports[`src/pages/SMSA2P/Link/List render with status customerreview 1`] = `
<List
  action={
    Array [
      Object {
        "children": "Refresh",
        "id": "link-list-refresh",
        "leftIcon": [Function],
        "loading": undefined,
        "onClick": undefined,
      },
    ]
  }
  breadcrumb={
    Array [
      Object {
        "label": "Link",
      },
    ]
  }
  filter={
    Array [
      Object {
        "id": "link-list-filters-status",
        "maxWidth": 300,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-customer",
        "maxWidth": 300,
        "searchable": true,
        "type": "dropdown",
      },
      Object {
        "id": "link-list-filters-date",
        "type": "dateRange",
      },
    ]
  }
  noMargin={false}
  noPadding={false}
  onBottomPage={[Function]}
  search={
    Object {
      "id": "link-list-search",
      "onChange": undefined,
      "placeholder": "Search...",
      "value": undefined,
    }
  }
  table={
    Object {
      "data": Array [
        Object {
          "activationStatus": "customerreview",
          "category": undefined,
          "status": "Customer Review",
        },
      ],
      "id": "link-list-table-row",
      "loading": false,
      "loadingRoot": undefined,
      "meta": undefined,
      "onClickRow": [MockFunction],
      "onPaginationChange": undefined,
      "page": undefined,
      "schema": Array [
        Object {
          "cellStyle": Object {
            "minWidth": 240,
          },
          "label": "Customer",
          "name": "custAccName",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Order Number",
          "name": "orderNumber",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "Service Category",
          "name": "category",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "label": "IP Customer",
          "name": "ip",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date",
          "label": "Request Active",
          "name": "activeDate",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Order Date",
          "name": "createdAt",
        },
        Object {
          "cellStyle": Object {
            "minWidth": 155,
          },
          "formatDate": "date-time",
          "label": "Last Update",
          "name": "updatedAt",
          "sort": true,
        },
        Object {
          "cellStyle": Object {
            "minWidth": 120,
          },
          "label": "Status",
          "name": "status",
          "schemaStatus": Object {
            "Checking": "warning",
            "Checking Order": "warning",
            "Completed": "success",
            "Customer Request": "primary",
            "Customer Review": "alert",
            "Rejected": "danger",
          },
        },
      ],
      "useOrderBy": Array [
        undefined,
        undefined,
      ],
      "useOrderDirection": Array [
        undefined,
        undefined,
      ],
    }
  }
  tabs={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "progress",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "options": Array [],
      "value": "onprogress",
    }
  }
  title="Link"
  withTopDivider={true}
/>
`;
